--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    {{> head }}
-  </head>
-  <body>
-    <div class="container">
-      {{> body }}
-    </div>
-  </body>
+    <html lang="en">
+    <head>
+        <title>{{title}}</title>
+        <link rel="stylesheet" href="../../resources/css/screen.css">
+    </head>
+    <body>
+    {{> body }}
+
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="../../resources/js/home_js/header.js"></script>
+    </body>
 </html>
