--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -2,12 +2,16 @@
     <html lang="en">
     <head>
         <title>{{title}}</title>
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="../../resources/css/screen.css">
+        <link rel="stylesheet" href="../../resources/css/materialize.css">
     </head>
     <body>
-    {{> body }}
+
+        {{> body }}
 
         <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script src="../../resources/js/home_js/header.js"></script>
     </body>
 </html>
