--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>{{title}}</title>
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="../../resources/css/screen.css">
@@ -13,5 +15,13 @@
         <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script src="../../resources/js/home_js/header.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('.datepicker').pickadate({
+                    selectMonths: true, // Creates a dropdown to control month
+                    selectYears: 200 // Creates a dropdown of 15 years to control year
+                });
+            });
+        </script>
     </body>
 </html>
