--- a/templates/partials/home/nav.hbs
+++ b/templates/partials/home/nav.hbs
@@ -1,22 +1,20 @@
-<nav>
+<nav class="red darken-3 z-depth-2">
     <div class="nav-wrapper">
-        <form>
-            <ul class="center hide-on-small-only">
+        <a class="brand-logo left hide-on-med-and-down" href="#!">Some - DER Soziale Messenger</a>
+        <a class="brand-logo center hide-on-large-only" href="#!">Some - DER Soziale Messenger</a>
+        <form class="hide-on-med-and-down">
+            <ul class="right hide-on-small-only">
                 <li>
-                    <div class="input-field">
-                        <input placeholder="Deine Email" type="email" id="email" name="email" class="validate">
-                    </div>
+                    <a href="#registration" class="waves-effect waves-light btn red darken-1">
+                        Registrieren
+                        <i class="material-icons right">weekend</i>
+                    </a>
                 </li>
                 <li>
-                    <div class="input-field">
-                        <input placeholder="Passwort" type="password" id="password" name="password" class="validate">
-                    </div>
-                </li>
-                <li>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">
-                        Einloggen
-                        <i class="material-icons right">send</i>
-                    </button>
+                    <a class="waves-effect waves-light btn red darken-1">
+                        Log-In
+                        <i class="material-icons right">vpn_key</i>
+                    </a>
                 </li>
             </ul>
         </form>
