--- a/templates/partials/home/registration.hbs
+++ b/templates/partials/home/registration.hbs
@@ -1,56 +1,4 @@
-<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Some</title>
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="../../resources/css/screen.css">
-        <link rel="stylesheet" href="../../resources/css/materialize.css">
-    </head>
-    <body>
-
-        
-<header>
-    <div class="content">
-        <hgroup>
-            <h1>Some</h1>
-            <i>The Social Messenger</i>
-        </hgroup>
-    </div>
-    <div class="overlay">
-
-    </div>
-</header>
-<nav class="red darken-3 z-depth-2">
-    <div class="nav-wrapper">
-        <a class="brand-logo left hide-on-med-and-down" href="#!">Some - DER Soziale Messenger</a>
-        <a class="brand-logo center hide-on-large-only" href="#!">Some - DER Soziale Messenger</a>
-        <form class="hide-on-med-and-down">
-            <ul class="right hide-on-small-only">
-                <li>
-                    <a href="#registration" class="waves-effect waves-light btn red darken-1">
-                        Registrieren
-                        <i class="material-icons right">weekend</i>
-                    </a>
-                </li>
-                <li>
-                    <a class="waves-effect waves-light btn red darken-1">
-                        Log-In
-                        <i class="material-icons right">vpn_key</i>
-                    </a>
-                </li>
-            </ul>
-        </form>
-    </div>
-</nav><div class="section white darken-2" id="section01">
-    <div class="row container">
-        <h2 class="header">Want Some Chat?</h2>
-        <p class="grey-text text-darken-3">Some ist ein Sozialer Messenger. Warum Sozialer Messenger? Das heißt doch normalerweise Soziales Netzwerk... </p>
-        <p class="gray-text text-darken-3">Ja! Das ist absolut richtig, aber der Begriff Soziales Netzwerk ist, wie wir finden mit zu vielen Störfaktoren verbunden. Sei es eine mit gesponsorten Beiträgen zugemüllte Startseite oder die tausendste Anfage zu Farmville.</p>
-        <p class="gray-text text-darken-3">Der Soziale Messenger legt deshalb den Schwerpunkt auf die Kommunikation! Deswegen startet nun mit vielen innovativen Ideen Some.</p>
-    </div>
-</div><div class="section z-depth-4 grey lighten-5" id="registration">
+<div class="section z-depth-4 grey lighten-5" id="registration">
 
     <ul class="collapsible" data-collapsible="accordion">
         <li>
@@ -102,24 +50,4 @@
             </div>
         </li>
     </ul>
-</div><div class="section white darken-2">
-    <div class="row container">
-        <h2 class="header">Warum Some?</h2>
-        <p class="grey-text text-darken-3">Die Frage, die sich vermutlich jeder neue Besucher dieser Seite fragen wird ist: Warum sollte ich Some nutzen? Es gibt doch so viele Alternativen.</p>
-        <p class="grey-text text-darken-3">Das ist ganz einfach zu beantworten!</p>
-        <p class="grey-text text-darken-3">Some verbindet das Beste aus Whatsapp, Facebook, Twitter und Instagram. Bleibt dabei leicht und übersichtlich und verliert nicht den Fokus auf`s Messaging.</p>
-    </div>
 </div>
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-        <script src="../../resources/js/home_js/header.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $('.datepicker').pickadate({
-                    selectMonths: true, // Creates a dropdown to control month
-                    selectYears: 200 // Creates a dropdown of 15 years to control year
-                });
-            });
-        </script>
-    </body>
-</html>
