index.html ist fertig, bisauf verlinkungen zu etwaigen seiten und zu den php Skripten.
Anfang der Aboutseite: Vorbereitung für Kenneth

--- a/_deploy/resources/css/screen.css
+++ b/_deploy/resources/css/screen.css
@@ -49,6 +49,8 @@ header {
 
 #section01 {
   padding-top: 4rem; }
+  #section01 .collection {
+    margin-top: 0; }
 
 #registration .collapsible {
   margin: 0; }
