--- a/templates/pages/index.hbs
+++ b/templates/pages/index.hbs
@@ -1,18 +1,10 @@
 ---
 title: Some
 ---
-<header>
-    <div class="content">
-        <hgroup>
-            <h1>Some</h1>
-            <i>The Social Messenger</i>
-        </hgroup>
-    </div>
-    <div class="overlay">
-
-    </div>
-</header>
+{{>log-in}}
+{{>header}}
 {{>nav}}
 {{>section01}}
 {{>registration}}
 {{>section02}}
+{{>footer}}
