--- a/templates/partials/home/section01.hbs
+++ b/templates/partials/home/section01.hbs
@@ -1,4 +1,7 @@
 <div class="section white darken-2" id="section01">
+    <div class="collection hide-on-large-only">
+        <a class="collection-item black-text center" href="#login">Log-In</a>
+    </div>
     <div class="row container">
         <h2 class="header">Want Some Chat?</h2>
         <p class="grey-text text-darken-3">Some ist ein Sozialer Messenger. Warum Sozialer Messenger? Das heißt doch normalerweise Soziales Netzwerk... </p>
