--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -21,6 +21,7 @@
                     selectMonths: true, // Creates a dropdown to control month
                     selectYears: 200 // Creates a dropdown of 15 years to control year
                 });
+                $('.modal').modal();
             });
         </script>
     </body>
