--- a/templates/partials/home/nav.hbs
+++ b/templates/partials/home/nav.hbs
@@ -11,7 +11,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-light btn red darken-1">
+                    <a href="#login" class="waves-effect waves-light btn red darken-1">
                         Log-In
                         <i class="material-icons right">vpn_key</i>
                     </a>
