Home-unterseiten generiert

--- a/templates/pages/index.hbs
+++ b/templates/pages/index.hbs
@@ -1,10 +1,10 @@
 ---
 title: Some
 ---
-{{>log-in}}
+{{>home_log-in}}
 {{>header}}
-{{>nav}}
-{{>section01}}
-{{>registration}}
-{{>section02}}
+{{>home_nav}}
+{{>home_section01}}
+{{>home_registration}}
+{{>home_section02}}
 {{>footer}}
