--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -9,8 +9,8 @@
                 <h5 class="white-text">Links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="about.html">Über Some</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Kontaktieren Sie die Entwickler</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Die Unterstützer</a></li>
+                    <li><a class="grey-text text-lighten-3" href="contact.html">Kontaktieren Sie die Entwickler</a></li>
+                    <li><a class="grey-text text-lighten-3" href="patreon.html">Die Unterstützer</a></li>
                 </ul>
             </div>
         </div>
@@ -18,7 +18,7 @@
     <div class="footer-copyright">
         <div class="container">
             © 2016 Copyright Some
-            <a class="grey-text text-lighten-4 right" href="#!">Impressum</a>
+            <a class="grey-text text-lighten-4 right" href="imprint.hmtl">Impressum</a>
         </div>
     </div>
 </footer>
