About text eingefügt, index text neu, patreon seite angefangen kleine fixes

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -18,7 +18,7 @@
     <div class="footer-copyright">
         <div class="container">
             © 2016 Copyright Some
-            <a class="grey-text text-lighten-4 right" href="imprint.hmtl">Impressum</a>
+            <a class="grey-text text-lighten-4 right" href="imprint.html">Impressum</a>
         </div>
     </div>
 </footer>
