--- a/templates/partials/imprint/imprint_text.hbs
+++ b/templates/partials/imprint/imprint_text.hbs
@@ -1,4 +1,4 @@
-<div class="section container" style="margin-top: 50px;">
+<div class="section container">
     <ul class="collection with-header">
         <li class="collection-header">
             Impressum
