--- a/templates/partials/home/home_log-in.hbs
+++ b/templates/partials/home/home_log-in.hbs
@@ -1,13 +1,13 @@
 <div class="modal" id="login">
     <div class="modal-content">
-        <form>
+        <form method="post" action="php/login.php">
             <div class="row">
                 <div class="col s12 m6 input-field">
-                    <input type="text" id="email_login" name="email_login">
+                    <input type="text" id="email_login" name="email">
                     <label for="email_login">Deine Email</label>
                 </div>
                 <div class="col s12 m6 input-field">
-                    <input type="password" id="pass_login" name="pass_login">
+                    <input type="password" id="pass_login" name="pass">
                     <label for="pass_login">Dein Passwort</label>
                 </div>
             </div>
