--- a/templates/partials/home/home_section01.hbs
+++ b/templates/partials/home/home_section01.hbs
@@ -3,9 +3,9 @@
         <a class="collection-item black-text center" href="#login">Log-In</a>
     </div>
     <div class="row container">
-        <h2 class="header">Want Some Chat?</h2>
-        <p class="grey-text text-darken-3">Some ist ein Sozialer Messenger. Warum Sozialer Messenger? Das heißt doch normalerweise Soziales Netzwerk... </p>
-        <p class="gray-text text-darken-3">Ja! Das ist absolut richtig, aber der Begriff Soziales Netzwerk ist, wie wir finden mit zu vielen Störfaktoren verbunden. Sei es eine mit gesponsorten Beiträgen zugemüllte Startseite oder die tausendste Anfage zu Farmville.</p>
-        <p class="gray-text text-darken-3">Der Soziale Messenger legt deshalb den Schwerpunkt auf die Kommunikation! Deswegen startet nun mit vielen innovativen Ideen Some.</p>
+        <h2 class="header">Warum Some?</h2>
+        <p class="grey-text text-darken-3">Die Frage, die sich vermutlich jeder neue Besucher dieser Seite fragen wird ist: Warum sollte ich Some nutzen? Es gibt doch schon Facebook, WhatsApp und co.</p>
+        <p class="grey-text text-darken-3">Das ist ganz einfach zu beantworten!</p>
+        <p class="grey-text text-darken-3">Some verbindet das Beste aus allen bekannten Diensten, bleibt dabei leicht und übersichtlich und verliert nicht den Fokus auf's Messaging.</p>
     </div>
 </div>
