--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -12,16 +12,61 @@
 
         {{> body }}
 
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-        <script src="../../resources/js/home_js/header.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
         <script type="text/javascript">
-            $(document).ready(function() {
-                $('.datepicker').pickadate({
-                    selectMonths: true, // Creates a dropdown to control month
-                    selectYears: 200 // Creates a dropdown of 15 years to control year
+            $(document).ready(function () {
+                $("#openSlider").sideNav({
+                    edge: 'left',
+                    draggable: true
                 });
-                $('.modal').modal();
+            });
+
+            ;(function(document, window, index) {
+                'use strict';
+
+                var elSelector = '#nav-extended',
+                element = document.querySelector(elSelector);
+
+                if (!element) return true;
+
+                var elHeight = 0,
+                elTop = 0,
+                dHeight = 0,
+                wHeight = 0,
+                wScrollCurrent = 0,
+                wScrollBefore = 0,
+                wScrollDiff = 0;
+
+                window.addEventListener('scroll', function() {
+                    elHeight = element.offsetHeight;
+                    dHeight = document.body.offsetHeight;
+                    wHeight = window.innerHeight;
+                    wScrollCurrent = window.pageYOffset;
+                    wScrollDiff = wScrollBefore - wScrollCurrent;
+                    elTop = parseInt(window.getComputedStyle(element).getPropertyValue('top')) + wScrollDiff;
+
+                    if (wScrollCurrent <= 0)
+                        element.style.top = '0px';
+
+                    else if (wScrollDiff > 0)
+                        element.style.top = (elTop > 0 ? 0 : elTop) + 'px';
+
+                    else if (wScrollDiff < 0) {
+                        if (wScrollCurrent + wHeight >= dHeight - elHeight)
+                            element.style.top = ((elTop = wScrollCurrent + wHeight - dHeight) < 0 ? elTop : 0) + 'px';
+
+                        else
+                            element.style.top = (Math.abs(elTop) > elHeight ? -elHeight : elTop) + 'px';
+                    }
+
+                    wScrollBefore = wScrollCurrent;
+                });
+
+            }(document, window, 0));
+
+            $(document).ready(function(){
+                $('ul.tabs').tabs();
             });
         </script>
     </body>
